[package]
name = "markov-clustering-rs"
version = "0.1.0"
authors = ["illumination-k <illumination.k.27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ndarray = { version = "0.13.0", features = ["approx"] }
ndarray-stats = "0.3"
ndarray-linalg = { version = "0.12", features = ["intel-mkl"] }
num-traits = "0.2"
approx = "*"

[dev-dependencies]
