[package]
name = "markov-clustering-rs"
version = "0.1.0"
authors = ["illumination-k <illumination.k.27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ndarray = { version = "0.14.0", features = ["approx"] }
num-traits = "0.2"
approx = "0.4"

[dev-dependencies]
